MMV 2:25pm 3.9.23 pre-button change

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         Great Coffee Co.
     </h1>
 
-    <a href="#cart" id="cart">Cart</a>
-    <a href="#appliances" id="appliances">Appliances</a>
-    <a href="#chocolates" id="chocolates">Chocolates</a>
-    <a href="#coffees" id="coffees">Coffees</a>
-    <a href="#home" id="home">Home</a>
+    <a href="#cart" name="cart" id="cart-nav">Cart</a>
+    <a href="#appliances" name="appliances" id="appliances-nav">Appliances</a>
+    <a href="#chocolates" name="chocolates" id="chocolates-nav">Chocolates</a>
+    <a href="#coffees" name="coffees" id="coffees-nav">Coffees</a>
+    <a href="#home" name="home" id="home-nav">Home</a>
 </nav>
 
 <div class="coffees">
-    <h1>
+    <h1 id="coffees">
         Coffee
     </h1>
-    <div class="block">
+    <div class="card">
         <h2>
             Dark Roast
         </h2>
@@ -43,7 +43,7 @@
             Add to Cart
         </button>
     </div>
-    <div class="block">
+    <div class="card">
         <h2>
             Light Roast
         </h2>
@@ -59,7 +59,7 @@
             Add to Cart
         </button>
     </div>
-    <div class="block">
+    <div class="card">
         <h2>
             Celtic Grog
         </h2>
@@ -77,7 +77,7 @@
 
     </div>
 
-    <div class="block">
+    <div class="card">
         <h2>
             Colombian (Decaf)
         </h2>
@@ -93,7 +93,7 @@
             Add to Cart
         </button>
     </div>
-    <div class="block">
+    <div class="card">
         <h2>
             Ethiopian
         </h2>
@@ -109,7 +109,7 @@
             Add to Cart
         </button>
     </div>
-    <div class="block">
+    <div class="card">
         <h2>
             Costa Rican
         </h2>
@@ -129,8 +129,10 @@
 </div>
 
 <div class="chocolates">
-    <h1>Chocolates</h1>
-    <div class="block">
+    <h1 id="chocolates">
+        Chocolates
+    </h1>
+    <div class="card">
         <h2>
             Milk Chocolate
         </h2>
@@ -146,7 +148,7 @@
             Add to Cart
         </button>
     </div>
-    <div class="block">
+    <div class="card">
         <h2>
             Dark Chocolate
         </h2>
@@ -162,7 +164,7 @@
             Add to Cart
         </button>
     </div>
-    <div class="block">
+    <div class="card">
         <h2>
             White Chocolate
         </h2>
@@ -181,10 +183,10 @@
 </div>
 
 <div class="appliances">
-    <h1>
+    <h1 id="appliances">
         Appliances
     </h1>
-    <div class="block">
+    <div class="card">
 
         <h2>
             Old World Grinder
@@ -201,7 +203,7 @@
             Add to Cart
         </button>
     </div>
-    <div class="block">
+    <div class="card">
         <h2>
             Burr Grinder
         </h2>
@@ -216,7 +218,7 @@
             Add to Cart
         </button>
     </div>
-    <div class="block">
+    <div class="card">
         <h2>
             Pour Over
         </h2>
@@ -250,6 +252,9 @@
 
 <div class="cart">
     <div class="line-items">
+        <h1 id="cart">
+            Cart
+        </h1>
         <ul class="cart-items">
         </ul>
     </div>
