MMV 2:27pm 3.9.23 Buttons fixed but need re-styled

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         Great Coffee Co.
     </h1>
 
-    <a href="#cart" name="cart" id="cart-nav">Cart</a>
-    <a href="#appliances" name="appliances" id="appliances-nav">Appliances</a>
-    <a href="#chocolates" name="chocolates" id="chocolates-nav">Chocolates</a>
-    <a href="#coffees" name="coffees" id="coffees-nav">Coffees</a>
-    <a href="#home" name="home" id="home-nav">Home</a>
+    <button name="cart" id="cart-nav">Cart</button>
+    <button name="appliances" id="appliances-nav">Appliances</button>
+    <button name="chocolates" id="chocolates-nav">Chocolates</button>
+    <button name="coffees" id="coffees-nav">Coffees</button>
+    <button name="home" id="home-nav">Home</button>
 </nav>
 
 <div class="coffees">
