MMV 2:44pm 3.9.23 nav now button, not anchors

--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta class="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
 
-<nav class="top-nav">
+<div class="top-nav">
     <h1 id="title">
         Great Coffee Co.
     </h1>
 
-    <button name="cart" id="cart-nav">Cart</button>
-    <button name="appliances" id="appliances-nav">Appliances</button>
-    <button name="chocolates" id="chocolates-nav">Chocolates</button>
-    <button name="coffees" id="coffees-nav">Coffees</button>
-    <button name="home" id="home-nav">Home</button>
-</nav>
+    <button class="page-button" id="cart-nav">Cart</button>
+    <button class="page-button" id="appliances-nav">Appliances</button>
+    <button class="page-button" id="chocolates-nav">Chocolates</button>
+    <button class="page-button" id="coffees-nav">Coffees</button>
+    <button class="page-button" id="home-nav">Home</button>
+</div>
 
 <div class="coffees">
     <h1 id="coffees">
