Mobile layout change

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p id="dark-roast-price">
             $12.99/pound
         </p>
-        <button class="addToCart" id="Dark Roast" value="11.99" onclick="addItem(this.id, this.value)">
+        <button class="add-to-cart" id="Dark Roast" value="11.99" onclick="addItem(this.id, this.value)">
             Add to Cart
         </button>
     </div>
@@ -55,7 +55,7 @@
         <p id="light-roast-price">
             $12.99/pound
         </p>
-        <button class="addToCart" id="Light Roast" value="9.99" onclick="addItem(this.id, this.value)">
+        <button class="add-to-cart" id="Light Roast" value="9.99" onclick="addItem(this.id, this.value)">
             Add to Cart
         </button>
     </div>
@@ -71,7 +71,7 @@
         <p id="celtic-grog-price">
             $12.99/pound
         </p>
-        <button class="addToCart" id="Celtic Grog" value="11.49" onclick="addItem(this.id, this.value)">
+        <button class="add-to-cart" id="Celtic Grog" value="11.49" onclick="addItem(this.id, this.value)">
             Add to Cart
         </button>
 
@@ -89,7 +89,7 @@
         <p id="colombian-decaf-price">
             $12.99/pound
         </p>
-        <button id="Colombian (Decaf)" value="12.49" onclick="addItem(this.id, this.value)">
+        <button class="add-to-cart" id="Colombian (Decaf)" value="12.49" onclick="addItem(this.id, this.value)">
             Add to Cart
         </button>
     </div>
@@ -105,7 +105,7 @@
         <p id="ethiopian-price">
             $12.99/pound
         </p>
-        <button class="addToCart" id="Ethiopian" value="10.99" onclick="addItem(this.id, this.value)">
+        <button class="add-to-cart" id="Ethiopian" value="10.99" onclick="addItem(this.id, this.value)">
             Add to Cart
         </button>
     </div>
@@ -121,7 +121,7 @@
         <p id="costa-rican-price">
             $12.99/pound
         </p>
-        <button id="Costa Rican" value="12.99" onclick="addItem(this.id, this.value)">
+        <button class="add-to-cart" id="Costa Rican" value="12.99" onclick="addItem(this.id, this.value)">
             Add to Cart
         </button>
 
@@ -144,7 +144,7 @@
         <p id="milk-chocolate-price">
             $3.99
         </p>
-        <button class="addToCart" id="Milk Chocolate" value="3.99" onclick="addItem(this.id, this.value)">
+        <button class="add-to-cart" id="Milk Chocolate" value="3.99" onclick="addItem(this.id, this.value)">
             Add to Cart
         </button>
     </div>
@@ -160,7 +160,7 @@
         <p id="dark-chocolate-price">
             $4.99
         </p>
-        <button class="addToCart" id="Dark Chocolate" value="4.99" onclick="addItem(this.id, this.value)">
+        <button class="add-to-cart" id="Dark Chocolate" value="4.99" onclick="addItem(this.id, this.value)">
             Add to Cart
         </button>
     </div>
@@ -176,7 +176,7 @@
         <p id="white-chocolate-price">
             $3.49
         </p>
-        <button class="addToCart" id="White Chocolate" value="3.49" onclick="addItem(this.id, this.value)">
+        <button class="add-to-cart" id="White Chocolate" value="3.49" onclick="addItem(this.id, this.value)">
             Add to Cart
         </button>
     </div>
@@ -199,7 +199,7 @@
         <p id="hand-grinder-price">
             $29.99
         </p>
-        <button class="addToCart" id="Old World Grinder" value="29.99" onclick="addItem(this.id, this.value)">
+        <button class="add-to-cart" id="Old World Grinder" value="29.99" onclick="addItem(this.id, this.value)">
             Add to Cart
         </button>
     </div>
@@ -214,7 +214,7 @@
         <p id="electric-grinder-price">
             $69.99
         </p>
-        <button class="addToCart" id="Burr Grinder" value="69.99" onclick="addItem(this.id, this.value)">
+        <button class="add-to-cart" id="Burr Grinder" value="69.99" onclick="addItem(this.id, this.value)">
             Add to Cart
         </button>
     </div>
@@ -230,7 +230,7 @@
         <p id="pour-over-price">
             $54.99
         </p>
-        <button class="addToCart" id="Pour Over" value="54.99" onclick="addItem(this.id, this.value)">
+        <button class="add-to-cart" id="Pour Over" value="54.99" onclick="addItem(this.id, this.value)">
             Add to Cart
         </button>
     </div>
